package org.project.shelfhelp.repositories;

public class ReadingListRepository {
}
